src/test/deca/context/invalid/SansObjet/DeclVar-NOT-string-int.deca
// Description:
//    Declaration of a string variable using ! operation on a int variable .
// 
// Results:
//     Contextual error
//     Line 13: (RULE 3.37) Illegal operand type..
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  20; 
    string z = !20 ; 
}
